src/test/ui/nll/issue-57100.stderr
error[E0502]: cannot borrow `r.r2_union.f3_union` (via `r.r2_union.f3_union.s2_leaf.l1_u8`) as immutable because it is also borrowed as mutable (via `r.r2_union.f3_union.s1_leaf.l1_u8`)
  --> $DIR/issue-57100.rs:44:20
   |
LL |         let mref = &mut r.r2_union.f3_union.s1_leaf.l1_u8;
   |                    -------------------------------------- mutable borrow occurs here (via `r.r2_union.f3_union.s1_leaf.l1_u8`)
...
LL |         let nref = &r.r2_union.f3_union.s2_leaf.l1_u8;
   |                    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ immutable borrow occurs here (via `r.r2_union.f3_union.s2_leaf.l1_u8`)
...
LL |         println!("{} {}", mref, nref)
   |                           ---- mutable borrow later used here

error[E0502]: cannot borrow `r.r2_union` (via `r.r2_union.f1_leaf.l1_u8`) as immutable because it is also borrowed as mutable (via `r.r2_union.f2_leaf.l1_u8`)
  --> $DIR/issue-57100.rs:62:20
   |
LL |         let mref = &mut r.r2_union.f2_leaf.l1_u8;
   |                    ----------------------------- mutable borrow occurs here (via `r.r2_union.f2_leaf.l1_u8`)
...
LL |         let nref = &r.r2_union.f1_leaf.l1_u8;
   |                    ^^^^^^^^^^^^^^^^^^^^^^^^^ immutable borrow occurs here (via `r.r2_union.f1_leaf.l1_u8`)
...
LL |         println!("{} {}", mref, nref)
   |                           ---- mutable borrow later used here

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0502`.
